# src/shared/infra/http/routes/index.ts
@@ -3,7 +3,8 @@ import { Router } from "express";
 import { authenticateRoutes } from "./authenticate.routes";
 import { carsRoutes } from "./cars.routes";
 import { categoriesRoutes } from "./categories.routes";
-import { rentalRoutes } from "./retal.routes";
+import { passwordRoutes } from "./password.routes";
+import { rentalRoutes } from "./rental.routes";
 import { specificationsRoutes } from "./specifications.routes";
 import { userRoutes } from "./users.routes";
 
@@ -14,6 +15,7 @@ router.use("/specifications", specificationsRoutes);
 router.use("/users", userRoutes);
 router.use("/cars", carsRoutes);
 router.use("/rentals", rentalRoutes);
+router.use("/password", passwordRoutes);
 router.use(authenticateRoutes);
 
 export { router };
